// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style": secretMappingTestDir2/realms/alpha/secret-mappings/am.services.httpclient.mtls.clientcert.mySecretLabel.secret.json 1`] = `
{
  "_id": "am.services.httpclient.mtls.clientcert.mySecretLabel.secret",
  "_rev": "-357538975",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-secret-thingy",
  ],
  "secretId": "am.services.httpclient.mtls.clientcert.mySecretLabel.secret",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style": secretMappingTestDir2/realms/alpha/secret-mappings/am.services.pingone.worker.pingonemfaworker.clientsecret.json 1`] = `
{
  "_id": "am.services.pingone.worker.pingonemfaworker.clientsecret",
  "_rev": "-1695061286",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-ping-mfa-worker-secret",
  ],
  "secretId": "am.services.pingone.worker.pingonemfaworker.clientsecret",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings --directory secretMappingTestDir2": should export the secret-mappings in alpha realm in fr-config-manager style": secretMappingTestDir2/realms/alpha/secret-mappings/am.services.pingone.worker.pingoneworkeraic.clientsecret.json 1`] = `
{
  "_id": "am.services.pingone.worker.pingoneworkeraic.clientsecret",
  "_rev": "-1632112936",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-ping-one-worker-secret",
  ],
  "secretId": "am.services.pingone.worker.pingoneworkeraic.clientsecret",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style": secretMappingTestDir1/realms/alpha/secret-mappings/am.services.httpclient.mtls.clientcert.testClientCert.secret.json 1`] = `
{
  "_id": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
  "_rev": "243715290",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-test-client-cert",
  ],
  "secretId": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style": secretMappingTestDir1/realms/bravo/secret-mappings/am.applications.agents.remote.consent.request.signing.ES384.json 1`] = `
{
  "_id": "am.applications.agents.remote.consent.request.signing.ES384",
  "_rev": "132500719",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "es384",
  ],
  "secretId": "am.applications.agents.remote.consent.request.signing.ES384",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -D secretMappingTestDir1": should export the secret-mappings in fr-config-manager style": secretMappingTestDir1/realms/bravo/secret-mappings/am.applications.agents.remote.consent.request.signing.ES512.json 1`] = `
{
  "_id": "am.applications.agents.remote.consent.request.signing.ES512",
  "_rev": "132496622",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "es512",
  ],
  "secretId": "am.applications.agents.remote.consent.request.signing.ES512",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -n esv-ping-one-worker-secret -D secretMappingTestDir3": should export the secret-mapping in alpha realm with alias name: esv-ping-one-worker-secret in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -n esv-ping-one-worker-secret -D secretMappingTestDir3": should export the secret-mapping in alpha realm with alias name: esv-ping-one-worker-secret in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secret-mappings -n esv-ping-one-worker-secret -D secretMappingTestDir3": should export the secret-mapping in alpha realm with alias name: esv-ping-one-worker-secret in fr-config-manager style": secretMappingTestDir3/realms/alpha/secret-mappings/am.services.pingone.worker.pingoneworkeraic.clientsecret.json 1`] = `
{
  "_id": "am.services.pingone.worker.pingoneworkeraic.clientsecret",
  "_rev": "-1632112936",
  "_type": {
    "_id": "mappings",
    "collection": true,
    "name": "Mappings",
  },
  "aliases": [
    "esv-ping-one-worker-secret",
  ],
  "secretId": "am.services.pingone.worker.pingoneworkeraic.clientsecret",
}
`;
